--- a/package.json
+++ b/package.json
@@ -11,5 +11,8 @@
     "hardhat": "^2.8.4",
     "mocha": "^7.2.0",
     "web3": "^1.7.0"
+  },
+  "dependencies": {
+    "dotenv": "^16.0.0"
   }
 }
