enabled deployment task
deployed current commited contract to  polygon mainnet using brave wallet. Resulting contract address:
 0x01953a75f92f694872B6b6C0bE51AeFA08270797

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -23,6 +23,11 @@
             },
             "type": "shell",
             "command": "clear && npx hardhat test "
+        },
+        {
+            "label": "deploy OpeanSpeak2.sol",
+            "type": "shell",
+            "command": "clear && npx hardhat run .\\scripts\\deploy.js --network polygon"
         }
     ]
 }
