--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
     "ethers": "^5.5.4",
     "hardhat": "^2.8.4",
     "mocha": "^7.2.0",
+    "watchify": "^4.0.0",
     "web3": "^1.7.0"
   },
   "dependencies": {
-    "dotenv": "^16.0.0"
+    "bootstrap": "^5.1.3",
+    "browserify": "^17.0.0",
+    "dotenv": "^16.0.0",
+    "ipfs-core": "^0.14.1"
   }
 }
