--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
   "name": "hardhat-project",
+  "scripts": {
+    "watchify": "watchify src/index.js -o src/bundle.js -v"
+  },
   "devDependencies": {
     "@nomiclabs/hardhat-ethers": "^2.0.5",
     "@nomiclabs/hardhat-truffle5": "^2.0.4",
@@ -17,6 +20,7 @@
     "bootstrap": "^5.1.3",
     "browserify": "^17.0.0",
     "dotenv": "^16.0.0",
-    "ipfs-core": "^0.14.1"
+    "ipfs-core": "^0.14.1",
+    "is-ipfs": "^6.0.2"
   }
 }
